add userId parameter to getTask and deleteTask methods in TaskController and TaskService